<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
    android:weightSum="1">
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_device_address"
                  android:textSize="18sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_state"
                  android:textSize="18sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/connection_state"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/disconnected"
                  android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_data"
                  android:textSize="18sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/data_value"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/no_data"
                  android:textSize="18sp"/>
    </LinearLayout>

    <Button
        android:text="@string/ph"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/button1"
        style="@android:style/Widget.Holo.Light.Button"
        android:elevation="0dp"
        android:layout_weight="0.63" />

    <Button
        android:text="@string/t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2" />

    <Button
        android:text="@string/potentiel_d_oxydo_r_duction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3" />

    <Button
        android:text="Ondulations de surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button5" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/space1" />

    <Button
        android:text="@string/faire_le_bilan_de_votre_piscine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button4" />

    <TextView
        android:text="---"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bilanChlore"
        android:textAlignment="center" />

</LinearLayout>